# sport-scores

./: .env  matches.json  matches_champ.json  matches_prem.json  matches_ts.json  matches_v2.json  pyproject.toml  readme.md  standings.json
sport_scores/: app.py
sport_scores/data/: api_requests.py  matches.py  standings.py
sport_scores/server_jobs/: getMatchData  getMatchData.py  getTables.py
sport_scores/templates/: 404.html  base.html  index.html  standings.html
tests/: test_sport_scores.py
