[tool.poetry]
name = "sport-scores"
version = "0.1.0"
description = ""
authors = ["scottamass <scot.atkinson@live.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.1"
requests = "^2.27.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
